--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "typeRoots": [
       "../../node_modules",
+      "../../node_modules/@types",      
       "./typings"
     ]
   }
